[package]
name = "websocket-web"
description = "WebSockets on the web"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WebSocket",
    "WritableStream",
    "WritableStreamDefaultWriter",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[patch.crates-io]
js-sys = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
web-sys = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
wasm-bindgen = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
wasm-bindgen-futures = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
wasm-bindgen-test = { git = "https://github.com/rust-wasi-web/wasm-bindgen.git" }
